[package]
name = "bort"
version = "0.1.0"
edition = "2021"

[dependencies]
cfgenius = "0.1.0"
derive-where = "1.2.1"
hashbrown = { version = "0.14.0", default-features = false, features = ["raw"] }
rustc-hash = "1.1.0"

[dependencies.compost2]
git = "https://github.com/Radbuglet/compost.git"
rev = "7727c0642b9762be5968e71b58ba3c9a04117669"
optional = true

[dependencies.saddle]
git = "https://github.com/Radbuglet/saddle.git"
rev = "9fd359cbb3597630496e627fcd49578b06518bfc"
optional = true

[dependencies.partial-scope]
git = "https://github.com/Radbuglet/saddle.git"
rev = "9fd359cbb3597630496e627fcd49578b06518bfc"
optional = true

[features]
default = ["saddle"]
saddle = ["dep:compost2", "dep:saddle", "dep:partial-scope"]

[dev-dependencies]
criterion = "0.5.1"
fastrand = "2.0.0"  # For "fuzzing"
glam = "0.24.0"     # For benchmark
linkme = "0.3.15"

[[bench]]
name = "access"
harness = false

[profile.bench]
lto = "thin"
