[package]
name = "bort"
version = "0.1.0"
edition = "2021"

[dependencies]
autoken = "0.1.0"
cfgenius = "0.1.0"
derive-where = "1.2.1"
hashbrown = { version = "0.14.0", default-features = false, features = ["raw"] }
rustc-hash = "1.1.0"

[dev-dependencies]
criterion = "0.5.1"
fastrand = "2.0.0"  # For "fuzzing"
glam = "0.24.0"     # For benchmark

[[bench]]
name = "access"
harness = false

[profile.bench]
lto = "thin"
